--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -249,7 +249,6 @@
 .dashboard {
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
     background-color: #363A3F;
 }
 
@@ -259,4 +258,47 @@
     margin-right: 8px;
     border-radius: 99px;
     cursor: pointer;
+    margin-top: 20px;
+}
+
+/* FrontPage.js */
+.frontpage {
+    display: flex;
+}
+
+/* NavigationPage.js */
+.navigation {
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+}
+
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    margin: 20px;
+    padding: 20px;
+    cursor: pointer;
+}
+
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.container {
+    padding: 2px 16px;
+    text-align: center;
+    font-size: 18px;
+    margin-top: 20px;
+    letter-spacing: 1.0px;
+}
+
+.navigation__first, .navigation__second {
+    display: flex;
+    margin-top: 25px;
+}
+
+/* bookappointment.js */
+.bookappointment {
+    display: flex;
 }
