Upcoming Appointments Done

--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -319,3 +319,12 @@
 .appointmentButtons__pay > p {
     color: white;
 }
+
+/* upcomingAppointments.js */
+.upcomingAppointments {
+    display: flex;
+}
+
+.upcomingAppointments__main {
+    width: 100%;
+}
