--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -314,6 +314,7 @@
     background-color: currentColor;
     padding: 10px;
     border-radius: 10px;
+    cursor: pointer;
 }
 
 .appointmentButtons__pay > p {
@@ -327,4 +328,9 @@
 
 .upcomingAppointments__main {
     width: 100%;
+}
+
+/* symptomChecker.js */
+.symptomChecker {
+    display: flex;
 }
