--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -1,4 +1,19 @@
 /* Sidebar */
+
+.sidebar::-webkit-scrollbar {
+  width: 10px;
+  
+}
+ 
+.sidebar::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+ 
+.sidebar::-webkit-scrollbar-thumb {
+  background-color: #363A3F;
+  border-radius: 20px;
+}
+
 .sidebar {
     display: flex;
     flex-direction: column;
