--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -375,6 +375,9 @@
 
 .questions__main {
     display: flex;
+    /* align-items: center; */
+    margin: 0 auto;
+    height: 100vw;
 }
 
 .questionCold {
